--- a/config/alfresco/site-webscripts/com/someco/components/dashlets/hello-world.get.properties
+++ b/config/alfresco/site-webscripts/com/someco/components/dashlets/hello-world.get.properties
@@ -2,3 +2,4 @@ header=Hello World!
 label.hello=Hello {0}
 label.goodbye=Goodbye {0}
 dashlet.help=This dashlet provides an example implementation which you can use to learn about making great dashlets.
+label.button=Click Me
