Add dashlet toolbar

--- a/config/alfresco/site-webscripts/com/someco/components/dashlets/hello-world.get.properties
+++ b/config/alfresco/site-webscripts/com/someco/components/dashlets/hello-world.get.properties
@@ -3,3 +3,6 @@ label.hello=Hello {0}
 label.goodbye=Goodbye {0}
 dashlet.help=This dashlet provides an example implementation which you can use to learn about making great dashlets.
 label.button=Click Me
+filter.choice1=Choice 1
+filter.choice2=Choice 2
+link.createAction=Create Something
