Add user messages and prompts displayed using PopupManager

--- a/config/alfresco/site-webscripts/com/someco/components/dashlets/hello-world.get.properties
+++ b/config/alfresco/site-webscripts/com/someco/components/dashlets/hello-world.get.properties
@@ -6,3 +6,5 @@ label.button=Click Me
 filter.choice1=Choice 1
 filter.choice2=Choice 2
 link.createAction=Create Something
+msg.selected=You selected {0}
+msg.prompt=The requested action was carried out
