Add Dom manipulation examples

--- a/config/alfresco/site-webscripts/com/someco/components/dashlets/hello-world.get.properties
+++ b/config/alfresco/site-webscripts/com/someco/components/dashlets/hello-world.get.properties
@@ -1,5 +1,6 @@
 header=Hello World!
 label.hello=Hello {0}
 label.goodbye=Goodbye {0}
+label.expert=You are a real dashlet expert now!
 dashlet.help=This dashlet provides an example implementation which you can use to learn about making great dashlets.
 label.button=Click Me
